--- a/portfolio.html
+++ b/portfolio.html
@@ -18,38 +18,42 @@
   <body>
     <!--Шапка сайта-->
     <header class="page-header">
-      <nav>
-        <a href="/" class="logo">
-          <p><span class="logo-accent">Web</span>Studio</p>
-        </a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+      <div class="container">
+        <nav>
+          <a href="/" class="logo">
+            <p><span class="logo-accent">Web</span>Studio</p>
+          </a>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li>
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li>
+            <a href="/">
+              <img src="./images/envelope-hover.svg" alt="электронная почта" />
+            </a>
+            <a href="" class="link">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="/">
+              <img src="./images/smartphone.svg" alt="смартфон" />
+            </a>
+            <a href="" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li>
-          <a href="/">
-            <img src="./images/envelope-hover.svg" alt="электронная почта" />
-          </a>
-          <a href="" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="/">
-            <img src="./images/smartphone.svg" alt="смартфон" />
-          </a>
-          <a href="" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section>
-        <h1>Портфолио</h1>
+      <section class="works">
+        <h1 class="works-title">Портфолио</h1>
 
         <!--Фильтр-->
-        <ul class="button">
+        <ul class="button list">
           <li>
             <button type="button" class="button primary">Все</button>
           </li>
@@ -69,7 +73,7 @@
 
         <!--Портфолио-->
 
-        <ul class="work-roster">
+        <ul class="work-roster list">
           <li>
             <a href="">
               <img src="./images/img-one.jpg" alt="пример страницы веб-сайта" />
@@ -206,7 +210,7 @@
     <!--Футер-->
     <footer class="footer">
       <a href="/" class="footer-logo">
-        <p><span class="accent">Web</span>Studio</p>
+        <p class="footer-words"><span class="accent">Web</span>Studio</p>
       </a>
       <div>
         <address class="address">
@@ -219,7 +223,7 @@
       </div>
       <div>
         <b class="subscription">присоединяйтесь</b>
-        <ul>
+        <ul class="list">
           <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
           <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
           <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
