--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <div class="container">
         <nav>
           <a href="/" class="logo">
-            <p><span class="logo-accent">Web</span>Studio</p>
+            <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
           </a>
           <ul class="site-nav list">
             <li><a href="./index.html" class="link">Студия</a></li>
@@ -50,190 +50,197 @@
 
     <main>
       <section class="works">
-        <h1 class="works-title">Портфолио</h1>
+        <div class="container">
+          <h1 class="works-title">Портфолио</h1>
 
-        <!--Фильтр-->
-        <ul class="button list">
-          <li>
-            <button type="button" class="button primary">Все</button>
-          </li>
-          <li>
-            <button type="button" class="button primary">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="button primary">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="button primary">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="button primary">Маркетинг</button>
-          </li>
-        </ul>
+          <!--Фильтр-->
+          <ul class="button list">
+            <li>
+              <button type="button" class="button primary">Все</button>
+            </li>
+            <li>
+              <button type="button" class="button primary">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="button primary">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="button primary">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="button primary">Маркетинг</button>
+            </li>
+          </ul>
 
-        <!--Портфолио-->
+          <!--Портфолио-->
 
-        <ul class="work-roster list">
-          <li>
-            <a href="">
-              <img src="./images/img-one.jpg" alt="пример страницы веб-сайта" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Технокряк</h2>
-              <p class="text">
-                Веб-сайт
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/star.jpg" alt="баскетболисты" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <p class="text">
-                Дизайн
-              </p>
-            </a>
-          </li>
-          <li>
-            <img src="./images/seafood.jpg" alt="логотип ресторана" />
-            <a href="">
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Ресторан Seafood</h2>
-              <p class="text">
-                Приложение
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/prime.jpg" alt="наушники" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Проект Prime</h2>
-              <p class="text">
-                Веб-сайт
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/boxes.jpg" alt="две коробки" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Проект Boxes</h2>
-              <p class="text">
-                Приложение
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/borders.jpg" alt="монитор компьюрета" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p class="text">
-                Веб-сайт
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/limited-edition.jpg" alt="открытый журнал" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Издание Limited Edition</h2>
-              <p class="text">
-                Дизайн
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/lab.jpg" alt="бирка с логотипом" />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Проект LAB</h2>
-              <p class="text">
-                Маркетинг
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/growing-business.jpg"
-                alt="работа за ноутбуком"
-              />
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <h2 class="title">Growing Business</h2>
-              <p class="text">
-                Приложение
-              </p>
-            </a>
-          </li>
-        </ul>
+          <ul class="work-roster list">
+            <li>
+              <a href="">
+                <img
+                  src="./images/img-one.jpg"
+                  alt="пример страницы веб-сайта"
+                />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Технокряк</h2>
+                <p class="text">
+                  Веб-сайт
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/star.jpg" alt="баскетболисты" />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p class="text">
+                  Дизайн
+                </p>
+              </a>
+            </li>
+            <li>
+              <img src="./images/seafood.jpg" alt="логотип ресторана" />
+              <a href="">
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Ресторан Seafood</h2>
+                <p class="text">
+                  Приложение
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/prime.jpg" alt="наушники" />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Проект Prime</h2>
+                <p class="text">
+                  Веб-сайт
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/boxes.jpg" alt="две коробки" />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Проект Boxes</h2>
+                <p class="text">
+                  Приложение
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/borders.jpg" alt="монитор компьюрета" />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p class="text">
+                  Веб-сайт
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/limited-edition.jpg" alt="открытый журнал" />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Издание Limited Edition</h2>
+                <p class="text">
+                  Дизайн
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/lab.jpg" alt="бирка с логотипом" />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Проект LAB</h2>
+                <p class="text">
+                  Маркетинг
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/growing-business.jpg"
+                  alt="работа за ноутбуком"
+                />
+                <p class="text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <h2 class="title">Growing Business</h2>
+                <p class="text">
+                  Приложение
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Футер-->
     <footer class="footer">
-      <a href="/" class="footer-logo">
-        <p class="footer-words"><span class="accent">Web</span>Studio</p>
-      </a>
-      <div>
-        <address class="address">
-          <a href="" class="address-list"
-            >г. Киев, пр-т Леси Украинки, 26 <br
-          /></a>
-          <a href="" class="address-contact">info@example.com <br /></a>
-          <a href="" class="address-contact">+38 099 111 11 11</a>
-        </address>
+      <div class="container">
+        <a href="/" class="footer-logo">
+          <p class="footer-words"><span class="accent">Web</span>Studio</p>
+        </a>
+        <div>
+          <address class="address">
+            <a href="" class="address-list"
+              >г. Киев, пр-т Леси Украинки, 26 <br
+            /></a>
+            <a href="" class="address-contact">info@example.com <br /></a>
+            <a href="" class="address-contact">+38 099 111 11 11</a>
+          </address>
+        </div>
+        <div>
+          <b class="subscription">присоединяйтесь</b>
+          <ul class="list">
+            <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+            <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+            <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+          </ul>
+        </div>
+        <div>
+          <b class="subscription">Подпишитесь на рассылку</b>
+        </div>
+        <p class="developed">2020 | Developed by GoIT Students</p>
       </div>
-      <div>
-        <b class="subscription">присоединяйтесь</b>
-        <ul class="list">
-          <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-          <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-          <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-          <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
-        </ul>
-      </div>
-      <div>
-        <b class="subscription">Подпишитесь на рассылку</b>
-      </div>
-      <p class="developed">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
