Вносит правки в геометрию проекта и разметку

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <header class="page-header">
       <div class="container">
         <nav>
-          <a href="/" class="logo">
+          <a href="./" class="logo">
             <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
           </a>
           <ul class="site-nav list">
@@ -33,16 +33,16 @@
         </nav>
         <ul class="contacts list">
           <li>
-            <a href="/">
+            <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
-            </a>
-            <a href="" class="link">info@devstudio.com</a>
+              info@devstudio.com
+              <a/>
           </li>
           <li>
-            <a href="/">
+            <a href="" class="link">
               <img src="./images/smartphone.svg" alt="смартфон" />
+              +38 096 111 11 11
             </a>
-            <a href="" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -76,7 +76,7 @@
 
           <ul class="work-roster list">
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img
                   src="./images/img-one.jpg"
                   alt="пример страницы веб-сайта"
@@ -93,7 +93,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img src="./images/star.jpg" alt="баскетболисты" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -108,7 +108,7 @@
             </li>
             <li>
               <img src="./images/seafood.jpg" alt="логотип ресторана" />
-              <a href="">
+              <a href="" class="portfolio">
                 <p class="text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img src="./images/prime.jpg" alt="наушники" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -135,7 +135,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img src="./images/boxes.jpg" alt="две коробки" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img src="./images/borders.jpg" alt="монитор компьюрета" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -163,7 +163,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img src="./images/limited-edition.jpg" alt="открытый журнал" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -177,7 +177,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img src="./images/lab.jpg" alt="бирка с логотипом" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -191,7 +191,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="" class="portfolio">
                 <img
                   src="./images/growing-business.jpg"
                   alt="работа за ноутбуком"
@@ -215,25 +215,45 @@
     <!--Футер-->
     <footer class="footer">
       <div class="container">
-        <a href="/" class="footer-logo">
-          <p class="footer-words"><span class="accent">Web</span>Studio</p>
-        </a>
         <div>
+          <a href="/" class="footer-logo">
+            <p class="footer-words"><span class="accent">Web</span>Studio</p>
+          </a>
           <address class="address">
             <a href="" class="address-list"
-              >г. Киев, пр-т Леси Украинки, 26 <br
-            /></a>
-            <a href="" class="address-contact">info@example.com <br /></a>
-            <a href="" class="address-contact">+38 099 111 11 11</a>
+              >г. Киев, пр-т Леси Украинки, 26 <br />
+            </a>
           </address>
+          <ul class="address-link">
+            <li>
+              <a href="" class="address-contact">info@example.com</a>
+            </li>
+            <li>
+              <a href="" class="address-contact">+38 099 111 11 11</a>
+            </li>
+          </ul>
         </div>
         <div>
           <b class="subscription">присоединяйтесь</b>
           <ul class="list">
-            <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-            <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-            <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на Instagram"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на Twitter">Twitter</a>
+            </li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на Facebook"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на LinkedIn"
+                >LinkedIn</a
+              >
+            </li>
           </ul>
         </div>
         <div>
