--- a/index.html
+++ b/index.html
@@ -19,27 +19,29 @@
     <header class="page-header">
       <div class="container">
         <nav>
-          <a href="/" class="logo">
+          <a href="./" class="logo">
             <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
           </a>
           <ul class="site-nav list">
             <li><a href="./index.html" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li>
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
             <li><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
           <li>
-            <a href="/">
+            <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
-            </a>
-            <a href="" class="link">info@devstudio.com</a>
+              info@devstudio.com
+              <a />
           </li>
           <li>
-            <a href="/">
+            <a href="" class="link">
               <img src="./images/smartphone.svg" alt="смартфон" />
+              +38 096 111 11 11
             </a>
-            <a href="" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -63,9 +65,7 @@
           <h2 class="section-title">Компания гарантирует</h2>
           <ul class="feature-list list">
             <li>
-              <a href="/">
                 <img src="./images/antenna.svg" alt="антена" />
-              </a>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -73,9 +73,7 @@
               </p>
             </li>
             <li>
-              <a href="/">
                 <img src="./images/clock.svg" alt="часы" />
-              </a>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -83,9 +81,7 @@
               </p>
             </li>
             <li>
-              <a href="/">
                 <img src="./images/vector.svg" alt="вектор" />
-              </a>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -93,9 +89,7 @@
               </p>
             </li>
             <li>
-              <a href="/">
                 <img src="./images/astronaut.svg" alt="астронавт" />
-              </a>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -113,21 +107,15 @@
           <ul class="work-list list">
             <li>
               <img src="./images/img.svg" alt="ноутбук" width="370" />
-              <a href="" class="link">
-                <h3 class="title">Десктопные приложения</h3>
-              </a>
+                <h3 class="title one">Десктопные приложения</h3>
             </li>
             <li>
               <img src="./images/box.svg" alt="смартфон" width="370" />
-              <a href="" class="link">
-                <h3 class="title">Мобильные приложения</h3>
-              </a>
+                <h3 class="title two">Мобильные приложения</h3>
             </li>
             <li>
               <img src="./images/img-1.svg" alt="монитор" width="370" />
-              <a href="" class="link">
-                <h3 class="title">Дизайнерские решения</h3>
-              </a>
+                <h3 class="title three">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -136,9 +124,7 @@
       <!--Наша команда-->
       <section class="section">
         <div class="container">
-          <a href="" class="section-link">
             <h2 class="section-title">Наша команда</h2>
-          </a>
           <ul class="team-list list">
             <li>
               <img
@@ -146,9 +132,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-              <a href="" class="profile">
                 <h3 class="title">John Smith</h3>
-              </a>
               <p class="position">Product Designer</p>
               <ul class="list">
                 <li>
@@ -183,9 +167,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-              <a href="" class="profile">
                 <h3 class="title">Marta Stewart</h3>
-              </a>
               <p class="position">Frontend Developer</p>
               <ul class="list">
                 <li>
@@ -220,9 +202,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-              <a href="" class="profile">
                 <h3 class="title">Robert Jakis</h3>
-              </a>
               <p class="position">Marketing</p>
               <ul class="list">
                 <li>
@@ -257,9 +237,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-              <a href="" class="profile">
                 <h3 class="title">Martin Doe</h3>
-              </a>
               <p class="position">UI Designer</p>
               <ul class="list">
                 <li>
@@ -336,25 +314,46 @@
     <!--Футер-->
     <footer class="footer">
       <div class="container">
-        <a href="/" class="footer-logo">
-          <p class="footer-words"><span class="accent">Web</span>Studio</p>
-        </a>
         <div>
+          <a href="/" class="footer-logo">
+            <p class="footer-words"><span class="accent">Web</span>Studio</p>
+          </a>
+
           <address class="address">
             <a href="" class="address-list"
-              >г. Киев, пр-т Леси Украинки, 26 <br
-            /></a>
-            <a href="" class="address-contact">info@example.com <br /></a>
-            <a href="" class="address-contact">+38 099 111 11 11</a>
+              >г. Киев, пр-т Леси Украинки, 26 <br />
+            </a>
           </address>
+          <ul class="address-link">
+            <li>
+              <a href="" class="address-contact">info@example.com</a>
+            </li>
+            <li>
+              <a href="" class="address-contact">+38 099 111 11 11</a>
+            </li>
+          </ul>
         </div>
         <div>
           <b class="subscription">присоединяйтесь</b>
           <ul class="list">
-            <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-            <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-            <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на Instagram"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на Twitter">Twitter</a>
+            </li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на Facebook"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a href="" class="item" aria-label="Ссылка на LinkedIn"
+                >LinkedIn</a
+              >
+            </li>
           </ul>
         </div>
         <div>
