--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
             <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
           </a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link current">Студия</a></li>
-            <li>
+            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
-          <li>
+          <li class="item">
             <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
               info@devstudio.com
               <a />
           </li>
-          <li>
+          <li class="item">
             <a href="" class="link">
               <img src="./images/smartphone.svg" alt="смартфон" />
               +38 096 111 11 11
