Добавляет  display: flex;

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
   <body>
     <!--Шапка сайта-->
     <header class="page-header">
-      <div class="container">
+      <div class="container main-nav">
         <nav>
           <a href="./" class="logo">
             <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
           </a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
@@ -35,7 +37,7 @@
             <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
               info@devstudio.com
-              <a />
+            </a>
           </li>
           <li class="item">
             <a href="" class="link">
@@ -65,7 +67,7 @@
           <h2 class="section-title">Компания гарантирует</h2>
           <ul class="feature-list list">
             <li>
-                <img src="./images/antenna.svg" alt="антена" />
+              <img src="./images/antenna.svg" alt="антена" />
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -73,7 +75,7 @@
               </p>
             </li>
             <li>
-                <img src="./images/clock.svg" alt="часы" />
+              <img src="./images/clock.svg" alt="часы" />
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -81,7 +83,7 @@
               </p>
             </li>
             <li>
-                <img src="./images/vector.svg" alt="вектор" />
+              <img src="./images/vector.svg" alt="вектор" />
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -89,7 +91,7 @@
               </p>
             </li>
             <li>
-                <img src="./images/astronaut.svg" alt="астронавт" />
+              <img src="./images/astronaut.svg" alt="астронавт" />
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -124,7 +126,7 @@
       <!--Наша команда-->
       <section class="section">
         <div class="container">
-            <h2 class="section-title">Наша команда</h2>
+          <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
             <li>
               <img
@@ -132,7 +134,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-                <h3 class="title">John Smith</h3>
+              <h3 class="title">John Smith</h3>
               <p class="position">Product Designer</p>
               <ul class="list">
                 <li>
@@ -167,7 +169,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-                <h3 class="title">Marta Stewart</h3>
+              <h3 class="title">Marta Stewart</h3>
               <p class="position">Frontend Developer</p>
               <ul class="list">
                 <li>
@@ -202,7 +204,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-                <h3 class="title">Robert Jakis</h3>
+              <h3 class="title">Robert Jakis</h3>
               <p class="position">Marketing</p>
               <ul class="list">
                 <li>
@@ -237,7 +239,7 @@
                 alt="фото члена команды"
                 width="270"
               />
-                <h3 class="title">Martin Doe</h3>
+              <h3 class="title">Martin Doe</h3>
               <p class="position">UI Designer</p>
               <ul class="list">
                 <li>
