--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
               info@devstudio.com
-              <a/>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -75,8 +75,8 @@
           <!--Портфолио-->
 
           <ul class="work-roster list">
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img
                   src="./images/img-one.jpg"
                   alt="пример страницы веб-сайта"
@@ -92,8 +92,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img src="./images/star.jpg" alt="баскетболисты" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -106,9 +106,9 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/seafood.jpg" alt="логотип ресторана" />
-              <a href="" class="portfolio">
+              <a href="" class="portfolio style">
                 <p class="text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
@@ -120,8 +120,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img src="./images/prime.jpg" alt="наушники" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -134,8 +134,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img src="./images/boxes.jpg" alt="две коробки" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -148,8 +148,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img src="./images/borders.jpg" alt="монитор компьюрета" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -162,8 +162,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img src="./images/limited-edition.jpg" alt="открытый журнал" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -176,8 +176,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img src="./images/lab.jpg" alt="бирка с логотипом" />
                 <p class="text">
                   Технокряк это современная площадка распространения
@@ -190,8 +190,8 @@
                 </p>
               </a>
             </li>
-            <li>
-              <a href="" class="portfolio">
+            <li class="item">
+              <a href="" class="portfolio style">
                 <img
                   src="./images/growing-business.jpg"
                   alt="работа за ноутбуком"
