--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <!--Шапка сайта-->
     <header class="page-header">
       <div class="container main-nav">
-        <nav>
+        <nav class="nav">
           <a href="./" class="logo">
-            <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
+            <p class="logo-words">
+              <span class="logo-accent">Web</span> Studio
+            </p>
           </a>
           <ul class="site-nav list">
             <li class="item">
@@ -32,7 +34,7 @@
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts list">
+        <ul class="contacts">
           <li class="item">
             <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
@@ -66,7 +68,7 @@
         <div class="container">
           <h2 class="section-title">Компания гарантирует</h2>
           <ul class="feature-list list">
-            <li>
+            <li class="element">
               <img src="./images/antenna.svg" alt="антена" />
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
@@ -74,7 +76,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="element">
               <img src="./images/clock.svg" alt="часы" />
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
@@ -82,7 +84,7 @@
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="element">
               <img src="./images/vector.svg" alt="вектор" />
               <h3 class="title">Планирование</h3>
               <p class="text">
@@ -90,7 +92,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="element">
               <img src="./images/astronaut.svg" alt="астронавт" />
               <h3 class="title">Современные технологии</h3>
               <p class="text">
@@ -104,18 +106,18 @@
 
       <!--Чем мы занимаемся-->
       <section class="section">
-        <div class="container">
+        <div class="container main-work">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
-            <li>
+            <li class="element">
               <img src="./images/img.svg" alt="ноутбук" width="370" />
               <h3 class="title one">Десктопные приложения</h3>
             </li>
-            <li>
+            <li class="element">
               <img src="./images/box.svg" alt="смартфон" width="370" />
               <h3 class="title two">Мобильные приложения</h3>
             </li>
-            <li>
+            <li class="element">
               <img src="./images/img-1.svg" alt="монитор" width="370" />
               <h3 class="title three">Дизайнерские решения</h3>
             </li>
@@ -125,10 +127,10 @@
 
       <!--Наша команда-->
       <section class="section">
-        <div class="container">
+        <div class="container main-team">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
-            <li>
+            <li class="element">
               <img
                 src="./images/img.jpg"
                 alt="фото члена команды"
@@ -136,23 +138,23 @@
               />
               <h3 class="title">John Smith</h3>
               <p class="position">Product Designer</p>
-              <ul class="list">
-                <li>
+              <ul class="list main-network">
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse.svg" alt="инстаграм" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-1.svg" alt="твиттер" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-2.svg" alt="фейсбук" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img
                       lang="en"
@@ -163,7 +165,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="element">
               <img
                 src="./images/img-1.jpg"
                 alt="фото члена команды"
@@ -171,23 +173,23 @@
               />
               <h3 class="title">Marta Stewart</h3>
               <p class="position">Frontend Developer</p>
-              <ul class="list">
-                <li>
+              <ul class="list main-network">
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse.svg" alt="инстаграм" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-1.svg" alt="твиттер" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-2.svg" alt="фейсбук" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img
                       lang="en"
@@ -198,7 +200,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="element">
               <img
                 src="./images/img-2.jpg"
                 alt="фото члена команды"
@@ -206,23 +208,23 @@
               />
               <h3 class="title">Robert Jakis</h3>
               <p class="position">Marketing</p>
-              <ul class="list">
-                <li>
+              <ul class="list main-network">
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse.svg" alt="инстаграм" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-1.svg" alt="твиттер" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-2.svg" alt="фейсбук" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img
                       lang="en"
@@ -233,7 +235,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="element">
               <img
                 src="./images/img-3.jpg"
                 alt="фото члена команды"
@@ -241,23 +243,23 @@
               />
               <h3 class="title">Martin Doe</h3>
               <p class="position">UI Designer</p>
-              <ul class="list">
-                <li>
+              <ul class="list main-network">
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse.svg" alt="инстаграм" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-1.svg" alt="твиттер" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img src="./images/ellipse-2.svg" alt="фейсбук" />
                   </a>
                 </li>
-                <li>
+                <li class="network">
                   <a href="">
                     <img
                       lang="en"
@@ -274,36 +276,36 @@
 
       <section class="section">
         <div class="container">
-          <a href="">
+          <a href="" class="customers-title">
             <h2 class="section-title">Постоянные клиенты</h2>
           </a>
-          <ul class="list">
-            <li>
+          <ul class="list customers">
+            <li class="examples">
               <a href="">
                 <img src="./images/client-1.svg" alt="клиент1" width="170" />
               </a>
             </li>
-            <li>
+            <li class="examples">
               <a href="">
                 <img src="./images/client-2.svg" alt="клиент2" width="170" />
               </a>
             </li>
-            <li>
+            <li class="examples">
               <a href="">
                 <img src="./images/client-3.svg" alt="клиент3" width="170" />
               </a>
             </li>
-            <li>
+            <li class="examples">
               <a href="">
                 <img src="./images/client-4.svg" alt="клиент4" width="170" />
               </a>
             </li>
-            <li>
+            <li class="examples">
               <a href="">
                 <img src="./images/client-5.svg" alt="клиент5" width="170" />
               </a>
             </li>
-            <li>
+            <li class="examples">
               <a href="">
                 <img src="./images/client-6.svg" alt="клиент6" width="170" />
               </a>
@@ -315,10 +317,10 @@
 
     <!--Футер-->
     <footer class="footer">
-      <div class="container">
+      <div class="container main-footer">
         <div>
-          <a href="/" class="footer-logo">
-            <p class="footer-words"><span class="accent">Web</span>Studio</p>
+          <a href="/" class="footer-logo hover">
+            <p class="footer-words"><span class="accent">Web</span> Studio</p>
           </a>
 
           <address class="address">
@@ -335,8 +337,8 @@
             </li>
           </ul>
         </div>
-        <div>
-          <b class="subscription">присоединяйтесь</b>
+        <div class="">
+          <b class="subscription hover">присоединяйтесь</b>
           <ul class="list">
             <li>
               <a href="" class="item" aria-label="Ссылка на Instagram"
@@ -358,11 +360,11 @@
             </li>
           </ul>
         </div>
-        <div>
-          <b class="subscription">Подпишитесь на рассылку</b>
+        <div class="footer-contacts">
+          <b class="subscription hover">Подпишитесь на рассылку</b>
         </div>
-        <p class="developed">2020 | Developed by GoIT Students</p>
       </div>
+      <p class="developed container">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
