Добавляет стили используя Flexbox

--- a/index.html
+++ b/index.html
@@ -110,15 +110,30 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
             <li class="element">
-              <img src="./images/img.svg" alt="ноутбук" width="370" />
+              <img
+                class="img-list"
+                src="./images/img.svg"
+                alt="ноутбук"
+                width="370"
+              />
               <h3 class="title one">Десктопные приложения</h3>
             </li>
             <li class="element">
-              <img src="./images/box.svg" alt="смартфон" width="370" />
+              <img
+                class="img-list"
+                src="./images/box.svg"
+                alt="смартфон"
+                width="370"
+              />
               <h3 class="title two">Мобильные приложения</h3>
             </li>
             <li class="element">
-              <img src="./images/img-1.svg" alt="монитор" width="370" />
+              <img
+                class="img-list"
+                src="./images/img-1.svg"
+                alt="монитор"
+                width="370"
+              />
               <h3 class="title three">Дизайнерские решения</h3>
             </li>
           </ul>
@@ -126,149 +141,161 @@
       </section>
 
       <!--Наша команда-->
-      <section class="section">
+      <section class="section team">
         <div class="container main-team">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="element">
               <img
+                class="img-team"
                 src="./images/img.jpg"
                 alt="фото члена команды"
                 width="270"
               />
-              <h3 class="title">John Smith</h3>
-              <p class="position">Product Designer</p>
-              <ul class="list main-network">
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse.svg" alt="инстаграм" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-1.svg" alt="твиттер" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-2.svg" alt="фейсбук" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img
-                      lang="en"
-                      src="./images/ellipse-3.svg"
-                      alt="LinkedIn"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="profile">
+                <h3 class="title">John Smith</h3>
+                <p class="position">Product Designer</p>
+                <ul class="list main-network">
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse.svg" alt="инстаграм" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-1.svg" alt="твиттер" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-2.svg" alt="фейсбук" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img
+                        lang="en"
+                        src="./images/ellipse-3.svg"
+                        alt="LinkedIn"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="element">
               <img
+                class="img-team"
                 src="./images/img-1.jpg"
                 alt="фото члена команды"
                 width="270"
               />
-              <h3 class="title">Marta Stewart</h3>
-              <p class="position">Frontend Developer</p>
-              <ul class="list main-network">
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse.svg" alt="инстаграм" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-1.svg" alt="твиттер" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-2.svg" alt="фейсбук" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img
-                      lang="en"
-                      src="./images/ellipse-3.svg"
-                      alt="LinkedIn"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="profile">
+                <h3 class="title">Marta Stewart</h3>
+                <p class="position">Frontend Developer</p>
+                <ul class="list main-network">
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse.svg" alt="инстаграм" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-1.svg" alt="твиттер" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-2.svg" alt="фейсбук" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img
+                        lang="en"
+                        src="./images/ellipse-3.svg"
+                        alt="LinkedIn"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="element">
               <img
+                class="img-team"
                 src="./images/img-2.jpg"
                 alt="фото члена команды"
                 width="270"
               />
-              <h3 class="title">Robert Jakis</h3>
-              <p class="position">Marketing</p>
-              <ul class="list main-network">
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse.svg" alt="инстаграм" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-1.svg" alt="твиттер" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-2.svg" alt="фейсбук" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img
-                      lang="en"
-                      src="./images/ellipse-3.svg"
-                      alt="LinkedIn"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="profile">
+                <h3 class="title">Robert Jakis</h3>
+                <p class="position">Marketing</p>
+                <ul class="list main-network">
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse.svg" alt="инстаграм" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-1.svg" alt="твиттер" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-2.svg" alt="фейсбук" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img
+                        lang="en"
+                        src="./images/ellipse-3.svg"
+                        alt="LinkedIn"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="element">
               <img
+                class="img-team"
                 src="./images/img-3.jpg"
                 alt="фото члена команды"
                 width="270"
               />
-              <h3 class="title">Martin Doe</h3>
-              <p class="position">UI Designer</p>
-              <ul class="list main-network">
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse.svg" alt="инстаграм" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-1.svg" alt="твиттер" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img src="./images/ellipse-2.svg" alt="фейсбук" />
-                  </a>
-                </li>
-                <li class="network">
-                  <a href="">
-                    <img
-                      lang="en"
-                      src="./images/ellipse-3.svg"
-                      alt="LinkedIn"
-                    />
-                  </a>
-                </li>
-              </ul>
+              <div class="profile">
+                <h3 class="title">Martin Doe</h3>
+                <p class="position">UI Designer</p>
+                <ul class="list main-network">
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse.svg" alt="инстаграм" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-1.svg" alt="твиттер" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img src="./images/ellipse-2.svg" alt="фейсбук" />
+                    </a>
+                  </li>
+                  <li class="network">
+                    <a href="">
+                      <img
+                        lang="en"
+                        src="./images/ellipse-3.svg"
+                        alt="LinkedIn"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -338,22 +365,24 @@
           </ul>
         </div>
         <div class="">
-          <b class="subscription hover">присоединяйтесь</b>
-          <ul class="list">
-            <li>
+          <div class="subscription-hover">
+            <b class="subscription hover">присоединяйтесь</b>
+          </div>
+          <ul class="list main-network">
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на Instagram"
                 >Instagram</a
               >
             </li>
-            <li>
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на Twitter">Twitter</a>
             </li>
-            <li>
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на Facebook"
                 >Facebook</a
               >
             </li>
-            <li>
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на LinkedIn"
                 >LinkedIn</a
               >
