--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,31 @@
   <body>
     <!--Шапка сайта-->
     <header class="page-header">
-      <div class="container">
-        <nav>
+      <div class="container main-nav">
+        <nav class="nav">
           <a href="./" class="logo">
-            <p class="logo-words"><span class="logo-accent">Web</span>Studio</p>
+            <p class="logo-words">
+              <span class="logo-accent">Web</span> Studio
+            </p>
           </a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li>
+            <li class="item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="item">
               <a href="./portfolio.html" class="link current">Портфолио</a>
             </li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts list">
-          <li>
+        <ul class="contacts">
+          <li class="item">
             <a href="" class="link">
               <img src="./images/envelope-hover.svg" alt="электронная почта" />
               info@devstudio.com
             </a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="link">
               <img src="./images/smartphone.svg" alt="смартфон" />
               +38 096 111 11 11
@@ -55,19 +59,19 @@
 
           <!--Фильтр-->
           <ul class="button list">
-            <li>
+            <li class="button-element">
               <button type="button" class="button primary">Все</button>
             </li>
-            <li>
+            <li class="button-element">
               <button type="button" class="button primary">Веб-сайты</button>
             </li>
-            <li>
+            <li class="button-element">
               <button type="button" class="button primary">Приложения</button>
             </li>
-            <li>
+            <li class="button-element">
               <button type="button" class="button primary">Дизайн</button>
             </li>
-            <li>
+            <li class="button-element">
               <button type="button" class="button primary">Маркетинг</button>
             </li>
           </ul>
@@ -78,133 +82,169 @@
             <li class="item">
               <a href="" class="portfolio style">
                 <img
+                  class="img"
                   src="./images/img-one.jpg"
                   alt="пример страницы веб-сайта"
                 />
-                <p class="text">
+                <p class="text information">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <h2 class="title">Технокряк</h2>
-                <p class="text">
-                  Веб-сайт
-                </p>
+                <div class="card">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">
+                    Веб-сайт
+                  </p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="portfolio style">
-                <img src="./images/star.jpg" alt="баскетболисты" />
-                <p class="text">
+                <img class="img" src="./images/star.jpg" alt="баскетболисты" />
+                <p class="text information">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">
-                  Дизайн
-                </p>
+                <div class="card">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">
+                    Дизайн
+                  </p>
+                </div>
               </a>
             </li>
             <li class="item">
-              <img src="./images/seafood.jpg" alt="логотип ресторана" />
+              <img
+                class="img"
+                src="./images/seafood.jpg"
+                alt="логотип ресторана"
+              />
               <a href="" class="portfolio style">
-                <p class="text">
+                <p class="text information">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">
-                  Приложение
-                </p>
-              </a>
-            </li>
-            <li class="item">
-              <a href="" class="portfolio style">
-                <img src="./images/prime.jpg" alt="наушники" />
-                <p class="text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-                <h2 class="title">Проект Prime</h2>
-                <p class="text">
-                  Веб-сайт
-                </p>
+                <div class="card">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">
+                    Приложение
+                  </p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="portfolio style">
-                <img src="./images/boxes.jpg" alt="две коробки" />
-                <p class="text">
+                <img class="img" src="./images/prime.jpg" alt="наушники" />
+                <p class="text information">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <h2 class="title">Проект Boxes</h2>
-                <p class="text">
-                  Приложение
-                </p>
+                <div class="card">
+                  <h2 class="title">Проект Prime</h2>
+                  <p class="text">
+                    Веб-сайт
+                  </p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="portfolio style">
-                <img src="./images/borders.jpg" alt="монитор компьюрета" />
-                <p class="text">
+                <img class="img" src="./images/boxes.jpg" alt="две коробки" />
+                <p class="text information">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">
-                  Веб-сайт
-                </p>
-              </a>
-            </li>
-            <li class="item">
-              <a href="" class="portfolio style">
-                <img src="./images/limited-edition.jpg" alt="открытый журнал" />
-                <p class="text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="text">
-                  Дизайн
-                </p>
-              </a>
-            </li>
-            <li class="item">
-              <a href="" class="portfolio style">
-                <img src="./images/lab.jpg" alt="бирка с логотипом" />
-                <p class="text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-                <h2 class="title">Проект LAB</h2>
-                <p class="text">
-                  Маркетинг
-                </p>
+                <div class="card">
+                  <h2 class="title">Проект Boxes</h2>
+                  <p class="text">
+                    Приложение
+                  </p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="portfolio style">
                 <img
-                  src="./images/growing-business.jpg"
-                  alt="работа за ноутбуком"
+                  class="img"
+                  src="./images/borders.jpg"
+                  alt="монитор компьюрета"
                 />
-                <p class="text">
+                <p class="text information">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <h2 class="title">Growing Business</h2>
-                <p class="text">
-                  Приложение
+                <div class="card">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">
+                    Веб-сайт
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="portfolio style">
+                <img
+                  class="img"
+                  src="./images/limited-edition.jpg"
+                  alt="открытый журнал"
+                />
+                <p class="text information">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
+                <div class="card">
+                  <h2 class="title">Издание Limited Edition</h2>
+                  <p class="text">
+                    Дизайн
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="portfolio style">
+                <img
+                  class="img"
+                  src="./images/lab.jpg"
+                  alt="бирка с логотипом"
+                />
+                <p class="text information">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="card">
+                  <h2 class="title">Проект LAB</h2>
+                  <p class="text">
+                    Маркетинг
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="portfolio style">
+                <img
+                  class="img"
+                  src="./images/growing-business.jpg"
+                  alt="работа за ноутбуком"
+                />
+                <p class="text information">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="card">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">
+                    Приложение
+                  </p>
+                </div>
               </a>
             </li>
           </ul>
@@ -214,11 +254,12 @@
 
     <!--Футер-->
     <footer class="footer">
-      <div class="container">
+      <div class="container main-footer">
         <div>
-          <a href="/" class="footer-logo">
-            <p class="footer-words"><span class="accent">Web</span>Studio</p>
+          <a href="/" class="footer-logo hover">
+            <p class="footer-words"><span class="accent">Web</span> Studio</p>
           </a>
+
           <address class="address">
             <a href="" class="address-list"
               >г. Киев, пр-т Леси Украинки, 26 <br />
@@ -233,34 +274,36 @@
             </li>
           </ul>
         </div>
-        <div>
-          <b class="subscription">присоединяйтесь</b>
-          <ul class="list">
-            <li>
+        <div class="">
+          <div class="subscription-hover">
+            <b class="subscription hover">присоединяйтесь</b>
+          </div>
+          <ul class="list main-network">
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на Instagram"
                 >Instagram</a
               >
             </li>
-            <li>
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на Twitter">Twitter</a>
             </li>
-            <li>
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на Facebook"
                 >Facebook</a
               >
             </li>
-            <li>
+            <li class="network">
               <a href="" class="item" aria-label="Ссылка на LinkedIn"
                 >LinkedIn</a
               >
             </li>
           </ul>
         </div>
-        <div>
-          <b class="subscription">Подпишитесь на рассылку</b>
+        <div class="footer-contacts">
+          <b class="subscription hover">Подпишитесь на рассылку</b>
         </div>
-        <p class="developed">2020 | Developed by GoIT Students</p>
       </div>
+      <p class="developed container">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
