--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <main>
       <section class="works">
         <div class="container">
-          <h1 class="works-title">Портфолио</h1>
+          <h1 class="works-title visually-hidden">Портфолио</h1>
 
           <!--Фильтр-->
           <ul class="button list">
